--- a/sysutils/py-lockfile/Makefile
+++ b/sysutils/py-lockfile/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.7 2016/01/09 16:54:21 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.8 2016/01/10 12:32:05 ajacoutot Exp $
 
 FLAVORS=	toto
 COMMENT=		platform-independent file locking for Python
@@ -6,6 +6,7 @@ COMMENT=		platform-independent file locking for Python
 MODPY_EGG_VERSION=	0.12.2
 DISTNAME=		lockfile-${MODPY_EGG_VERSION}
 PKGNAME=		py-${DISTNAME}
+REVISION=		0
 
 CATEGORIES=		sysutils
 
@@ -17,6 +18,9 @@ PERMIT_PACKAGE_CDROM=	Yes
 MASTER_SITES=		https://pylockfile.googlecode.com/files/
 
 MODULES=		lang/python
+
+BUILD_DEPENDS=		devel/py-pbr
+RUN_DEPENDS=		devel/py-pbr
 
 MODPY_PI=		Yes
 MODPY_SETUPTOOLS=	Yes
