--- a/sysutils/py-lockfile/Makefile
+++ b/sysutils/py-lockfile/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.8 2016/01/10 12:32:05 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.9 2016/01/10 13:40:33 ajacoutot Exp $
 
 FLAVORS=	toto
 COMMENT=		platform-independent file locking for Python
@@ -6,7 +6,7 @@ COMMENT=		platform-independent file locking for Python
 MODPY_EGG_VERSION=	0.12.2
 DISTNAME=		lockfile-${MODPY_EGG_VERSION}
 PKGNAME=		py-${DISTNAME}
-REVISION=		0
+REVISION=		1
 
 CATEGORIES=		sysutils
 
@@ -19,13 +19,21 @@ MASTER_SITES=		https://pylockfile.googlecode.com/files/
 
 MODULES=		lang/python
 
-BUILD_DEPENDS=		devel/py-pbr
-RUN_DEPENDS=		devel/py-pbr
+BUILD_DEPENDS=		devel/py-pbr${MODPY_FLAVOR}
+RUN_DEPENDS=		devel/py-pbr${MODPY_FLAVOR}
 
 MODPY_PI=		Yes
 MODPY_SETUPTOOLS=	Yes
 
-TEST_DEPENDS=		devel/py-nose \
+FLAVORS=		python3
+FLAVOR ?=
+
+.if ${FLAVOR:Mpython3}
+# needs textproc/py-sphinx,python3
+NO_TEST=		Yes
+.else
+TEST_DEPENDS=		devel/py-nose${MODPY_FLAVOR} \
 			textproc/py-sphinx
+.endif
 
 .include <bsd.port.mk>
