--- a/fonts/blockzone/Makefile
+++ b/fonts/blockzone/Makefile
@@ -1,15 +1,17 @@
-# $OpenBSD: Makefile,v 1.4 2016/01/11 13:56:28 jasper Exp $
+# $OpenBSD: Makefile,v 1.5 2016/01/11 14:11:08 ajacoutot Exp $
 
 COMMENT =	faithful, pixel-perfect recreation of the original DOS font
 
 GH_ACCOUNT =	ansilove
 GH_PROJECT =	BlockZone
 GH_TAGNAME =	1.004
+REVISION =	0
+
 CATEGORIES =	fonts
 
 HOMEPAGE =	https://github.com/ansilove/blockzone
 
-MAINTAINER =	Frederic Cambus <fcambus@users.sourceforge.net>
+MAINTAINER =	Frederic Cambus <fred@statdns.com>
 
 # SIL Open Font License 1.1
 PERMIT_PACKAGE_CDROM =	Yes
