--- a/games/uqm/Makefile
+++ b/games/uqm/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.41 2016/01/11 09:35:44 ajacoutot Exp $
+# $OpenBSD: Makefile,v 1.42 2016/01/11 21:29:50 espie Exp $
 
 COMMENT-main=		ur-quan masters: space exploration game with battles
 COMMENT-content=	ur-quan masters: game content
@@ -34,11 +34,9 @@ PKGNAME-remix3 =	uqm-remix3-$V
 PKGNAME-remix4 =	uqm-remix4-$V
 PKGNAME-threedomusic =	uqm-threedomusic-$V
 PKGNAME-voice =		uqm-voice-$V
-REVISION =		2
+REVISION =		3
 EXTRACT_ONLY =		${uqm_source}
 MASTER_SITES=		${MASTER_SITE_SOURCEFORGE:=sc2/}
-
-REVISION =		0
 
 HOMEPAGE=		http://sc2.sourceforge.net/
 
