--- a/multimedia/get_iplayer/Makefile
+++ b/multimedia/get_iplayer/Makefile
@@ -1,22 +1,20 @@
-# $OpenBSD: Makefile,v 1.93 2015/07/06 13:49:49 sthen Exp $
+# $OpenBSD: Makefile,v 1.94 2016/01/14 09:53:31 sthen Exp $
 
 COMMENT=		download/stream programmes from BBC iPlayer
 
-V=			2.94
-REVISION=		0
-DISTNAME=		get_iplayer-$V
-DISTFILES=		${DISTNAME}{v$V}${EXTRACT_SUFX}
+DISTNAME=		get_iplayer-2.95pre20160114
+GH_ACCOUNT=		get-iplayer
+GH_PROJECT=		get_iplayer
+GH_COMMIT=		e7bfcf55c1ac15f2fe780156e07d3ae30e21e9a7
+
 CATEGORIES=		multimedia
 
-# http://git.infradead.org/get_iplayer.git
 HOMEPAGE=		http://www.infradead.org/get_iplayer/
 
 # GPLv3+
 PERMIT_PACKAGE_CDROM=	Yes
 
 MAINTAINER=		Stuart Henderson <sthen@openbsd.org>
-
-MASTER_SITES=		https://github.com/get-iplayer/get_iplayer/archive/
 
 RUN_DEPENDS=		audio/id3lib \
 			audio/p5-MP3-Tag \
@@ -44,8 +42,6 @@ do-install:
 	${SUBST_DATA} -m 644 \
 	   ${FILESDIR}/options.sample ${PREFIX}/share/get_iplayer/options.sample
 	${INSTALL_SCRIPT} ${WRKSRC}/get_iplayer ${PREFIX}/bin
-	${INSTALL_SCRIPT} ${WRKSRC}/plugins/* \
-	    ${PREFIX}/share/get_iplayer/plugins
 	${INSTALL_MAN} ${WRKSRC}/get_iplayer.1 ${PREFIX}/man/man1
 
 .include <bsd.port.mk>
