--- a/devel/quirks/Makefile
+++ b/devel/quirks/Makefile
@@ -1,11 +1,11 @@
-# $OpenBSD: Makefile,v 1.334 2016/01/16 23:25:26 kili Exp $
+# $OpenBSD: Makefile,v 1.335 2016/01/17 01:16:38 juanfra Exp $
 
 COMMENT =	exceptions to pkg_add rules
 CATEGORIES =	devel databases
 DISTFILES =
 
 # API.rev
-PKGNAME =	quirks-2.179
+PKGNAME =	quirks-2.180
 PKG_ARCH =	*
 MAINTAINER =	Marc Espie <espie@openbsd.org>
 
