--- a/sysutils/libvirt/Makefile
+++ b/sysutils/libvirt/Makefile
@@ -1,8 +1,8 @@
-# $OpenBSD: Makefile,v 1.44 2016/01/08 18:49:12 jasper Exp $
+# $OpenBSD: Makefile,v 1.45 2016/01/17 09:19:06 jasper Exp $
 
 COMMENT=		tool/library for managing platform virtualization
 
-DISTNAME=		libvirt-1.3.0
+DISTNAME=		libvirt-1.3.1
 CATEGORIES=		sysutils devel
 
 SHARED_LIBS +=	virt-qemu                 0.4 # 1003.0
@@ -40,8 +40,7 @@ LIB_DEPENDS=		net/avahi \
 
 USE_GMAKE=		Yes
 
-AUTOCONF_VERSION=	2.69
-CONFIGURE_STYLE=	autoconf
+CONFIGURE_STYLE=	gnu
 CONFIGURE_ARGS+=	${CONFIGURE_SHARED} \
 			--with-avahi \
 			--with-ssh2 \
