--- a/graphics/freeglut/Makefile
+++ b/graphics/freeglut/Makefile
@@ -1,11 +1,11 @@
-# $OpenBSD: Makefile,v 1.14 2015/08/17 19:10:12 sthen Exp $
+# $OpenBSD: Makefile,v 1.15 2016/01/17 17:29:09 sthen Exp $
 
 # no libGL (toolchain issue)
 NOT_FOR_ARCHS=	m88k
 
 COMMENT =		open source alternative to glut
 DISTNAME =		freeglut-2.8.0
-REVISION =		3
+REVISION =		4
 SHARED_LIBS =		glut 5.0
 CATEGORIES =		graphics
 HOMEPAGE =		http://freeglut.sourceforge.net/
@@ -14,8 +14,8 @@ MAINTAINER =		Tobias Ulmer <tobiasu@tmux.org>
 # X11
 PERMIT_PACKAGE_CDROM =	Yes
 
-WANTLIB += GL X11 X11-xcb Xau Xdamage Xdmcp Xext Xfixes Xi Xrandr
-WANTLIB += Xrender Xxf86vm drm glapi m pthread pthread-stubs stdc++
+WANTLIB += GL X11 X11-xcb Xdamage Xext Xfixes Xi Xrandr
+WANTLIB += Xrender Xxf86vm drm expat glapi m nghttp2 pthread
 WANTLIB += usbhid xcb xcb-dri2 xcb-glx
 
 MASTER_SITES =		${MASTER_SITE_SOURCEFORGE:=freeglut/}
