--- a/net/scamper/Makefile
+++ b/net/scamper/Makefile
@@ -1,11 +1,11 @@
-# $OpenBSD: Makefile,v 1.23 2016/01/17 17:29:10 sthen Exp $
+# $OpenBSD: Makefile,v 1.24 2016/01/17 17:49:46 sthen Exp $
 
 SHARED_LIBS +=  scamperfile               1.0 # 0.0
 
 COMMENT =	parallel internet measurement utility
 
 V =		20141211d
-REVISION =	0
+REVISION =	1
 DISTNAME =	scamper-cvs-$V
 PKGNAME =	scamper-$V
 
@@ -18,13 +18,13 @@ MAINTAINER =	Stuart Henderson <sthen@openbsd.org>
 # GPLv2 only
 PERMIT_PACKAGE_CDROM =	 Yes
 
-WANTLIB += c crypto m ssl
+WANTLIB += c m
 
 MASTER_SITES =	http://www.caida.org/tools/measurement/scamper/code/
 
-USE_GROFF =		Yes
 SEPARATE_BUILD =	Yes
-CONFIGURE_STYLE =	gnu
+CONFIGURE_STYLE =	autoconf
+AUTOCONF_VERSION =	2.69
 CONFIGURE_ARGS =	--with-privsep-user=_scamper
 
 post-install:
