--- a/devel/quirks/Makefile
+++ b/devel/quirks/Makefile
@@ -1,11 +1,11 @@
-# $OpenBSD: Makefile,v 1.338 2016/01/19 02:00:21 bentley Exp $
+# $OpenBSD: Makefile,v 1.339 2016/01/19 21:13:02 mmcc Exp $
 
 COMMENT =	exceptions to pkg_add rules
 CATEGORIES =	devel databases
 DISTFILES =
 
 # API.rev
-PKGNAME =	quirks-2.183
+PKGNAME =	quirks-2.184
 PKG_ARCH =	*
 MAINTAINER =	Marc Espie <espie@openbsd.org>
 
