--- a/devel/quirks/Makefile
+++ b/devel/quirks/Makefile
@@ -1,11 +1,11 @@
-# $OpenBSD: Makefile,v 1.340 2016/01/19 23:19:12 mmcc Exp $
+# $OpenBSD: Makefile,v 1.341 2016/01/20 12:21:19 jasper Exp $
 
 COMMENT =	exceptions to pkg_add rules
 CATEGORIES =	devel databases
 DISTFILES =
 
 # API.rev
-PKGNAME =	quirks-2.185
+PKGNAME =	quirks-2.186
 PKG_ARCH =	*
 MAINTAINER =	Marc Espie <espie@openbsd.org>
 
