--- a/devel/quirks/Makefile
+++ b/devel/quirks/Makefile
@@ -1,11 +1,11 @@
-# $OpenBSD: Makefile,v 1.342 2016/01/20 17:55:44 jasper Exp $
+# $OpenBSD: Makefile,v 1.343 2016/01/21 00:05:40 kili Exp $
 
 COMMENT =	exceptions to pkg_add rules
 CATEGORIES =	devel databases
 DISTFILES =
 
 # API.rev
-PKGNAME =	quirks-2.187
+PKGNAME =	quirks-2.188
 PKG_ARCH =	*
 MAINTAINER =	Marc Espie <espie@openbsd.org>
 
