--- a/www/py-httpie/Makefile
+++ b/www/py-httpie/Makefile
@@ -1,14 +1,13 @@
-# $OpenBSD: Makefile,v 1.4 2015/09/29 10:52:54 sthen Exp $
+# $OpenBSD: Makefile,v 1.5 2016/01/22 08:23:40 landry Exp $
 
 COMMENT =	command-line HTTP client
 
-MODPY_EGG_VERSION =	0.9.2
+MODPY_EGG_VERSION =	0.9.3
 GH_TAGNAME =	${MODPY_EGG_VERSION}
-GH_ACCOUNT =	jakubroztocil
+GH_ACCOUNT =	jkbrzt
 GH_PROJECT =	httpie
 DISTNAME =	httpie-${MODPY_EGG_VERSION}
 PKGNAME =	py-httpie-${MODPY_EGG_VERSION}
-REVISION =	0
 
 CATEGORIES =	www net
 
@@ -22,5 +21,6 @@ MODPY_SETUPTOOLS =	Yes
 RUN_DEPENDS =	www/py-requests \
 		textproc/py-pygments
 TEST_DEPENDS =	${RUN_DEPENDS}
+PORTHOME =	${WRKSRC}
 
 .include <bsd.port.mk>
