--- a/www/py-httpie/Makefile
+++ b/www/py-httpie/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.5 2016/01/22 08:23:40 landry Exp $
+# $OpenBSD: Makefile,v 1.6 2016/01/22 08:41:35 landry Exp $
 
 COMMENT =	command-line HTTP client
 
@@ -20,7 +20,15 @@ MODULES =	lang/python
 MODPY_SETUPTOOLS =	Yes
 RUN_DEPENDS =	www/py-requests \
 		textproc/py-pygments
-TEST_DEPENDS =	${RUN_DEPENDS}
+TEST_DEPENDS =	${RUN_DEPENDS} \
+		devel/py-test \
+		devel/py-test-httpbin \
+		devel/py-mock
 PORTHOME =	${WRKSRC}
+
+pre-test:
+	# check for docutils presence then calls rst2pseudoxml.py
+	# our docutils installs rst2pseudoxml
+	rm ${WRKSRC}/tests/test_docs.py
 
 .include <bsd.port.mk>
