--- a/archivers/p7zip/Makefile
+++ b/archivers/p7zip/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.26 2015/11/16 22:52:08 jca Exp $
+# $OpenBSD: Makefile,v 1.27 2016/01/22 13:38:37 sthen Exp $
 
 SHARED_ONLY=	Yes
 
@@ -6,7 +6,7 @@ COMMENT-main=	file archiver with high compression ratio
 COMMENT-rar=	rar modules for p7zip
 
 V=		15.09
-REVISION=	0
+REVISION=	1
 DISTNAME=	p7zip_${V}_src_all
 PKGNAME=	p7zip-${V}
 PKGNAME-main=	p7zip-${V}
