--- a/graphics/ansilove/Makefile
+++ b/graphics/ansilove/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.2 2016/01/22 08:52:22 benoit Exp $
+# $OpenBSD: Makefile,v 1.3 2016/01/22 14:24:30 tb Exp $
 
 COMMENT =	ansi and ascii art to png converter
 
@@ -13,6 +13,7 @@ MAINTAINER =	Frederic Cambus <fred@statdns.com>
 # BSD
 PERMIT_PACKAGE_CDROM =	Yes
 
+# uses pledge()
 WANTLIB =	c m pthread gd
 
 LIB_DEPENDS =	graphics/gd
