--- a/www/chromium/Makefile
+++ b/www/chromium/Makefile
@@ -1,4 +1,4 @@
-# $OpenBSD: Makefile,v 1.264 2016/01/23 18:49:30 robert Exp $
+# $OpenBSD: Makefile,v 1.265 2016/01/23 20:43:27 robert Exp $
 
 ONLY_FOR_ARCHS=		i386 amd64
 DPB_PROPERTIES=		parallel
@@ -6,6 +6,7 @@ DPB_PROPERTIES=		parallel
 COMMENT=		Chromium browser
 
 V=			48.0.2564.82
+REVISION=		0
 DISTNAME=		chromium-${V}
 DISTFILES=		${DISTNAME}${EXTRACT_SUFX}
 
